# catch2-testing-example

./: CMakeLists.txt  README.md  coverage.code_Receiver.cpp.html  coverage.code_Sender.cpp.html  coverage.html
code/: CMakeLists.txt  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h
tests/: CMakeLists.txt  input.txt  main_tests.cpp
